// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GridItem should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa bDWFJH"
  >
    Grid Item
  </div>
</DocumentFragment>
`;

exports[`GridItemBase should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa bDWFJH"
  >
    Grid Item Base
  </div>
</DocumentFragment>
`;
